--- a/.inputrc
+++ b/.inputrc
@@ -1,2 +1,2 @@
-"\e[5~": history-search-backward   
-"\e[6~": history-search-forward 
+"\e[A": history-search-backward   
+"\e[B": history-search-forward 
