VIM-2 Search through tree by gd; Terminal xterm by default in screen

--- a/.screenrc
+++ b/.screenrc
@@ -1,4 +1,5 @@
 #term "screen-256color"
+term xterm
 termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
 termcapinfo xterm* ti@:te@
 #attrcolor b ".I"
